# flatpack-team-kickoff-example

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy-railway.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_users.py  003_team_kickoff.py
backend/app/: bootstrap.py  config.py  deps.py  main.py  rate_limit.py
backend/app/api/: auth.py  checklist_templates.py  items.py  public.py  runs.py
backend/app/middleware/: csrf.py
backend/app/models/: __init__.py  audit_log.py  base.py  checklist_item.py  checklist_progress.py  checklist_run.py  checklist_section.py  checklist_template.py  item.py  user.py
backend/app/schemas/: auth.py  checklist_template.py  item.py  run.py  user.py
backend/app/services/: checklist_templates.py  items.py  runs.py  users.py
backend/app/tasks/: scheduler.py
backend/scripts/: dump_openapi.py  verify_promotion.py
backend/tests/: conftest.py  test_auth.py  test_checklist.py  test_csrf.py  test_items.py
docs/: flatpack-archetype-to-recipe-map.md  promoting-a-flatpack.md
docs/recipes/: README.md  (+5 more)
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
reference/: decisions.md  original-flatpack.html  promoted-entities.json  promotion-plan.md
(+33 files in other folders)
